@@ -1,12 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:layout_width="fill_parent" android:layout_height="fill_parent">
-	<ListView android:id="@+id/android:list" android:layout_width="fill_parent"
+<LinearLayout
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	android:layout_width="fill_parent"
+	android:layout_height="fill_parent">
+
+	<ListView
+		android:id="@id/android:list"
+		android:layout_width="fill_parent"
 		android:layout_height="wrap_content" />
-	<TextView android:id="@+id/android:empty"
-		android:layout_width="fill_parent" android:layout_height="fill_parent"
-		android:text="@string/no_scrobbles_in_cache" android:textAppearance="?android:attr/textAppearanceMedium"
-		android:textColor="?android:attr/textColorPrimary" android:gravity="center"
-		android:textStyle="bold" android:layout_margin="4dip" />
+	<TextView
+		android:id="@id/android:empty"
+		android:layout_width="fill_parent"
+		android:layout_height="fill_parent"
+		android:text="@string/no_scrobbles_in_cache"
+		android:textAppearance="?android:attr/textAppearanceMedium"
+		android:textColor="?android:attr/textColorPrimary"
+		android:gravity="center"
+		android:textStyle="bold"
+		android:layout_margin="4dip" />
 
 </LinearLayout>
